Add tool configuration functionality